; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/gdi/dib/extr_dib1bpp.c_DIB_1BPP_HLine.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/gdi/dib/extr_dib1bpp.c_DIB_1BPP_HLine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DIB_1BPP_HLine(i32* %0, i64 %1, i64 %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i32 %4, i32* %11, align 4
  br label %12

12:                                               ; preds = %16, %5
  %13 = load i64, i64* %8, align 8
  %14 = load i64, i64* %9, align 8
  %15 = icmp slt i64 %13, %14
  br i1 %15, label %16, label %24

16:                                               ; preds = %12
  %17 = load i32*, i32** %7, align 8
  %18 = load i64, i64* %8, align 8
  %19 = load i64, i64* %10, align 8
  %20 = load i32, i32* %11, align 4
  %21 = call i32 @DIB_1BPP_PutPixel(i32* %17, i64 %18, i64 %19, i32 %20)
  %22 = load i64, i64* %8, align 8
  %23 = add nsw i64 %22, 1
  store i64 %23, i64* %8, align 8
  br label %12

24:                                               ; preds = %12
  %25 = load i32, i32* %6, align 4
  ret i32 %25
}

declare dso_local i32 @DIB_1BPP_PutPixel(i32*, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
